// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ExplainDialog matches snapshot on error 1`] = `
<div
  class="bp6-portal"
>
  <div
    aria-live="polite"
    class="bp6-overlay bp6-overlay-open bp6-overlay-scroll-container"
  >
    <div
      class="bp6-overlay-start-focus-trap bp6-overlay-appear bp6-overlay-appear-active"
      tabindex="0"
    />
    <div
      class="bp6-overlay-backdrop bp6-overlay-appear bp6-overlay-appear-active"
    />
    <div
      class="bp6-dialog-container bp6-overlay-content bp6-overlay-appear bp6-overlay-appear-active"
      tabindex="0"
    >
      <div
        aria-labelledby="title-bp-dialog-2"
        aria-modal="true"
        class="bp6-dialog explain-dialog"
        role="dialog"
      >
        <div
          class="bp6-dialog-header"
        >
          <h2
            class="bp6-heading"
            id="title-bp-dialog-2"
          >
            Query plan
          </h2>
          <button
            aria-label="Close"
            class="bp6-button bp6-minimal bp6-dialog-close-button"
            type="button"
          >
            <span
              aria-hidden="true"
              class="bp6-icon bp6-icon-small-cross"
            >
              <svg
                data-icon="small-cross"
              />
            </span>
          </button>
        </div>
        <div
          class="bp6-dialog-body"
        >
          <div>
            test error
          </div>
        </div>
        <div
          class="bp6-dialog-footer"
        >
          <div
            class="bp6-dialog-footer-actions"
          >
            <button
              class="bp6-button"
              type="button"
            >
              <span
                class="bp6-button-text"
              >
                Close
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp6-overlay-end-focus-trap bp6-overlay-appear bp6-overlay-appear-active"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`ExplainDialog matches snapshot on init 1`] = `
<div
  class="bp6-portal"
>
  <div
    aria-live="polite"
    class="bp6-overlay bp6-overlay-open bp6-overlay-scroll-container"
  >
    <div
      class="bp6-overlay-start-focus-trap bp6-overlay-appear bp6-overlay-appear-active"
      tabindex="0"
    />
    <div
      class="bp6-overlay-backdrop bp6-overlay-appear bp6-overlay-appear-active"
    />
    <div
      class="bp6-dialog-container bp6-overlay-content bp6-overlay-appear bp6-overlay-appear-active"
      tabindex="0"
    >
      <div
        aria-labelledby="title-bp-dialog-0"
        aria-modal="true"
        class="bp6-dialog explain-dialog"
        role="dialog"
      >
        <div
          class="bp6-dialog-header"
        >
          <h2
            class="bp6-heading"
            id="title-bp-dialog-0"
          >
            Query plan
          </h2>
          <button
            aria-label="Close"
            class="bp6-button bp6-minimal bp6-dialog-close-button"
            type="button"
          >
            <span
              aria-hidden="true"
              class="bp6-icon bp6-icon-small-cross"
            >
              <svg
                data-icon="small-cross"
              />
            </span>
          </button>
        </div>
        <div
          class="bp6-dialog-body"
        >
          <div />
        </div>
        <div
          class="bp6-dialog-footer"
        >
          <div
            class="bp6-dialog-footer-actions"
          >
            <button
              class="bp6-button"
              type="button"
            >
              <span
                class="bp6-button-text"
              >
                Close
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp6-overlay-end-focus-trap bp6-overlay-appear bp6-overlay-appear-active"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`ExplainDialog matches snapshot on loading 1`] = `
<div
  class="bp6-portal"
>
  <div
    aria-live="polite"
    class="bp6-overlay bp6-overlay-open bp6-overlay-scroll-container"
  >
    <div
      class="bp6-overlay-start-focus-trap bp6-overlay-appear bp6-overlay-appear-active"
      tabindex="0"
    />
    <div
      class="bp6-overlay-backdrop bp6-overlay-appear bp6-overlay-appear-active"
    />
    <div
      class="bp6-dialog-container bp6-overlay-content bp6-overlay-appear bp6-overlay-appear-active"
      tabindex="0"
    >
      <div
        aria-labelledby="title-bp-dialog-1"
        aria-modal="true"
        class="bp6-dialog explain-dialog"
        role="dialog"
      >
        <div
          class="bp6-dialog-header"
        >
          <h2
            class="bp6-heading"
            id="title-bp-dialog-1"
          >
            Query plan
          </h2>
          <button
            aria-label="Close"
            class="bp6-button bp6-minimal bp6-dialog-close-button"
            type="button"
          >
            <span
              aria-hidden="true"
              class="bp6-icon bp6-icon-small-cross"
            >
              <svg
                data-icon="small-cross"
              />
            </span>
          </button>
        </div>
        <div
          class="bp6-dialog-body"
        >
          <div
            class="loader"
          >
            <div
              class="loader-logo"
            >
              <svg
                viewBox="0 0 100 100"
              >
                <path
                  class="one"
                  d="M54.2,69.8h-2.7c-0.7,0-1.3-0.6-1.3-1.3c0-0.7,0.6-1.3,1.3-1.3h2.7c11.5,0,23.8-7.4,23.8-23.7
          c0-9.1-6.9-15.8-16.4-15.8H38c-0.7,0-1.3-0.6-1.3-1.3s0.6-1.3,1.3-1.3h23.6c5.3,0,10.1,1.9,13.6,5.3c3.5,3.4,5.4,8,5.4,13.1
          c0,6.6-2.3,13-6.3,17.7C69.5,66.8,62.5,69.8,54.2,69.8z"
                />
                <path
                  class="two"
                  d="M55.7,59.5h-26c-0.7,0-1.3-0.6-1.3-1.3c0-0.7,0.6-1.3,1.3-1.3h26c7.5,0,11.5-5.8,11.5-11.5
            c0-4.2-3.2-7.3-7.7-7.3h-26c-0.7,0-1.3-0.6-1.3-1.3s0.6-1.3,1.3-1.3h26c5.9,0,10.3,4.3,10.3,9.9c0,3.7-1.3,7.2-3.7,9.8
            C63.5,58,59.9,59.5,55.7,59.5z"
                />
                <path
                  class="three"
                  d="M27.2,38h-6.3c-0.7,0-1.3-0.6-1.3-1.3s0.6-1.3,1.3-1.3h6.3c0.7,0,1.3,0.6,1.3,1.3S27.9,38,27.2,38z"
                />
                <path
                  class="four"
                  d="M45.1,69.8h-5.8c-0.7,0-1.3-0.6-1.3-1.3c0-0.7,0.6-1.3,1.3-1.3h5.8c0.7,0,1.3,0.6,1.3,1.3
            C46.4,69.2,45.8,69.8,45.1,69.8z"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="bp6-dialog-footer"
        >
          <div
            class="bp6-dialog-footer-actions"
          >
            <button
              class="bp6-button"
              type="button"
            >
              <span
                class="bp6-button-text"
              >
                Close
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp6-overlay-end-focus-trap bp6-overlay-appear bp6-overlay-appear-active"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`ExplainDialog matches snapshot on some data (many queries) 1`] = `
<div
  class="bp6-portal"
>
  <div
    aria-live="polite"
    class="bp6-overlay bp6-overlay-open bp6-overlay-scroll-container"
  >
    <div
      class="bp6-overlay-start-focus-trap bp6-overlay-appear bp6-overlay-appear-active"
      tabindex="0"
    />
    <div
      class="bp6-overlay-backdrop bp6-overlay-appear bp6-overlay-appear-active"
    />
    <div
      class="bp6-dialog-container bp6-overlay-content bp6-overlay-appear bp6-overlay-appear-active"
      tabindex="0"
    >
      <div
        aria-labelledby="title-bp-dialog-4"
        aria-modal="true"
        class="bp6-dialog explain-dialog"
        role="dialog"
      >
        <div
          class="bp6-dialog-header"
        >
          <h2
            class="bp6-heading"
            id="title-bp-dialog-4"
          >
            Query plan
          </h2>
          <button
            aria-label="Close"
            class="bp6-button bp6-minimal bp6-dialog-close-button"
            type="button"
          >
            <span
              aria-hidden="true"
              class="bp6-icon bp6-icon-small-cross"
            >
              <svg
                data-icon="small-cross"
              />
            </span>
          </button>
        </div>
        <div
          class="bp6-dialog-body"
        >
          <div
            class="bp6-tabs bp6-vertical"
          >
            <div
              class="bp6-tab-list"
              role="tablist"
            >
              <div
                class="bp6-tab-indicator-wrapper"
                style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px; transition: none;"
              >
                <div
                  class="bp6-tab-indicator"
                />
              </div>
              <div
                aria-controls="bp6-tab-panel_undefined_0"
                aria-disabled="false"
                aria-expanded="true"
                aria-selected="true"
                class="bp6-tab"
                data-tab-id="0"
                id="bp6-tab-title_undefined_0"
                role="tab"
                tabindex="0"
              >
                Query 1
              </div>
              <div
                aria-controls="bp6-tab-panel_undefined_1"
                aria-disabled="false"
                aria-expanded="false"
                aria-selected="false"
                class="bp6-tab"
                data-tab-id="1"
                id="bp6-tab-title_undefined_1"
                role="tab"
                tabindex="-1"
              >
                Query 2
              </div>
              <div
                class="bp6-flex-expander"
              />
            </div>
            <div
              aria-hidden="false"
              aria-labelledby="bp6-tab-title_undefined_0"
              class="bp6-tab-panel"
              id="bp6-tab-panel_undefined_0"
              role="tabpanel"
            >
              <div
                class="query-explanation"
              >
                <div
                  class="bp6-form-group query-group"
                >
                  <div
                    class="bp6-form-content"
                  >
                    <div
                      class=" ace_editor ace_hidpi ace-solarized-dark ace_dark query-string"
                      id="ace-editor"
                      style="width: 100%; height: 100%; font-size: 12px;"
                    >
                      <textarea
                        autocapitalize="off"
                        autocorrect="off"
                        class="ace_text-input"
                        readonly=""
                        spellcheck="false"
                        style="opacity: 0; font-size: 1px;"
                        wrap="off"
                      />
                      <div
                        aria-hidden="true"
                        class="ace_gutter"
                      >
                        <div
                          class="ace_layer ace_gutter-layer ace_folding-enabled"
                          style="height: 1000000px;"
                        />
                      </div>
                      <div
                        class="ace_scroller"
                        style="line-height: 0px;"
                      >
                        <div
                          class="ace_content"
                        >
                          <div
                            class="ace_layer ace_print-margin-layer"
                          >
                            <div
                              class="ace_print-margin"
                              style="left: 4px; visibility: hidden;"
                            />
                          </div>
                          <div
                            class="ace_layer ace_marker-layer"
                          />
                          <div
                            class="ace_layer ace_text-layer"
                            style="height: 1000000px; margin: 0px 4px;"
                          />
                          <div
                            class="ace_layer ace_marker-layer"
                          />
                          <div
                            class="ace_layer ace_cursor-layer ace_hidden-cursors"
                          >
                            <div
                              class="ace_cursor"
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="ace_scrollbar ace_scrollbar-v"
                        style="display: none; width: 20px;"
                      >
                        <div
                          class="ace_scrollbar-inner"
                          style="width: 20px;"
                        >
                           
                        </div>
                      </div>
                      <div
                        class="ace_scrollbar ace_scrollbar-h"
                        style="display: none; height: 20px;"
                      >
                        <div
                          class="ace_scrollbar-inner"
                          style="height: 20px;"
                        >
                           
                        </div>
                      </div>
                      <div
                        style="height: auto; width: auto; top: 0px; left: 0px; visibility: hidden; position: absolute; white-space: pre; overflow: hidden;"
                      >
                        <div
                          style="height: auto; width: auto; top: 0px; left: 0px; visibility: hidden; position: absolute; white-space: pre; overflow: visible;"
                        />
                        <div
                          style="height: auto; width: auto; top: 0px; left: 0px; visibility: hidden; position: absolute; white-space: pre; overflow: visible;"
                        >
                          XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="bp6-form-group signature-group"
                >
                  <label
                    class="bp6-label"
                  >
                    Signature
                     
                    <span
                      class="bp6-text-muted"
                    />
                  </label>
                  <div
                    class="bp6-form-content"
                  >
                    <div
                      class="bp6-input-group bp6-read-only"
                    >
                      <input
                        class="bp6-input"
                        readonly=""
                        type="text"
                        value="channel::STRING→channel"
                      />
                    </div>
                  </div>
                </div>
                <button
                  class="bp6-button bp6-intent-primary bp6-minimal open-query"
                  type="button"
                >
                  <span
                    class="bp6-button-text"
                  >
                    Open query
                  </span>
                  <span
                    aria-hidden="true"
                    class="bp6-icon bp6-icon-arrow-top-right"
                  >
                    <svg
                      data-icon="arrow-top-right"
                    />
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp6-dialog-footer"
        >
          <div
            class="bp6-dialog-footer-actions"
          >
            <button
              class="bp6-button"
              type="button"
            >
              <span
                class="bp6-button-text"
              >
                Close
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp6-overlay-end-focus-trap bp6-overlay-appear bp6-overlay-appear-active"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`ExplainDialog matches snapshot on some data (one query) 1`] = `
<div
  class="bp6-portal"
>
  <div
    aria-live="polite"
    class="bp6-overlay bp6-overlay-open bp6-overlay-scroll-container"
  >
    <div
      class="bp6-overlay-start-focus-trap bp6-overlay-appear bp6-overlay-appear-active"
      tabindex="0"
    />
    <div
      class="bp6-overlay-backdrop bp6-overlay-appear bp6-overlay-appear-active"
    />
    <div
      class="bp6-dialog-container bp6-overlay-content bp6-overlay-appear bp6-overlay-appear-active"
      tabindex="0"
    >
      <div
        aria-labelledby="title-bp-dialog-3"
        aria-modal="true"
        class="bp6-dialog explain-dialog"
        role="dialog"
      >
        <div
          class="bp6-dialog-header"
        >
          <h2
            class="bp6-heading"
            id="title-bp-dialog-3"
          >
            Query plan
          </h2>
          <button
            aria-label="Close"
            class="bp6-button bp6-minimal bp6-dialog-close-button"
            type="button"
          >
            <span
              aria-hidden="true"
              class="bp6-icon bp6-icon-small-cross"
            >
              <svg
                data-icon="small-cross"
              />
            </span>
          </button>
        </div>
        <div
          class="bp6-dialog-body"
        >
          <div
            class="query-explanation"
          >
            <div
              class="bp6-form-group query-group"
            >
              <div
                class="bp6-form-content"
              >
                <div
                  class=" ace_editor ace_hidpi ace-solarized-dark ace_dark query-string"
                  id="ace-editor"
                  style="width: 100%; height: 100%; font-size: 12px;"
                >
                  <textarea
                    autocapitalize="off"
                    autocorrect="off"
                    class="ace_text-input"
                    readonly=""
                    spellcheck="false"
                    style="opacity: 0; font-size: 1px;"
                    wrap="off"
                  />
                  <div
                    aria-hidden="true"
                    class="ace_gutter"
                  >
                    <div
                      class="ace_layer ace_gutter-layer ace_folding-enabled"
                      style="height: 1000000px;"
                    />
                  </div>
                  <div
                    class="ace_scroller"
                    style="line-height: 0px;"
                  >
                    <div
                      class="ace_content"
                    >
                      <div
                        class="ace_layer ace_print-margin-layer"
                      >
                        <div
                          class="ace_print-margin"
                          style="left: 4px; visibility: hidden;"
                        />
                      </div>
                      <div
                        class="ace_layer ace_marker-layer"
                      />
                      <div
                        class="ace_layer ace_text-layer"
                        style="height: 1000000px; margin: 0px 4px;"
                      />
                      <div
                        class="ace_layer ace_marker-layer"
                      />
                      <div
                        class="ace_layer ace_cursor-layer ace_hidden-cursors"
                      >
                        <div
                          class="ace_cursor"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="ace_scrollbar ace_scrollbar-v"
                    style="display: none; width: 20px;"
                  >
                    <div
                      class="ace_scrollbar-inner"
                      style="width: 20px;"
                    >
                       
                    </div>
                  </div>
                  <div
                    class="ace_scrollbar ace_scrollbar-h"
                    style="display: none; height: 20px;"
                  >
                    <div
                      class="ace_scrollbar-inner"
                      style="height: 20px;"
                    >
                       
                    </div>
                  </div>
                  <div
                    style="height: auto; width: auto; top: 0px; left: 0px; visibility: hidden; position: absolute; white-space: pre; overflow: hidden;"
                  >
                    <div
                      style="height: auto; width: auto; top: 0px; left: 0px; visibility: hidden; position: absolute; white-space: pre; overflow: visible;"
                    />
                    <div
                      style="height: auto; width: auto; top: 0px; left: 0px; visibility: hidden; position: absolute; white-space: pre; overflow: visible;"
                    >
                      XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bp6-form-group signature-group"
            >
              <label
                class="bp6-label"
              >
                Signature
                 
                <span
                  class="bp6-text-muted"
                />
              </label>
              <div
                class="bp6-form-content"
              >
                <div
                  class="bp6-input-group bp6-read-only"
                >
                  <input
                    class="bp6-input"
                    readonly=""
                    type="text"
                    value="d0::STRING→channel, a0::LONG→"Count""
                  />
                </div>
              </div>
            </div>
            <button
              class="bp6-button bp6-intent-primary bp6-minimal open-query"
              type="button"
            >
              <span
                class="bp6-button-text"
              >
                Open query
              </span>
              <span
                aria-hidden="true"
                class="bp6-icon bp6-icon-arrow-top-right"
              >
                <svg
                  data-icon="arrow-top-right"
                />
              </span>
            </button>
          </div>
        </div>
        <div
          class="bp6-dialog-footer"
        >
          <div
            class="bp6-dialog-footer-actions"
          >
            <button
              class="bp6-button"
              type="button"
            >
              <span
                class="bp6-button-text"
              >
                Close
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp6-overlay-end-focus-trap bp6-overlay-appear bp6-overlay-appear-active"
      tabindex="0"
    />
  </div>
</div>
`;
